Contact Page finished
This marks the end of Version 1

--- a/styles/contact-styles.css
+++ b/styles/contact-styles.css
@@ -1,1 +1,455 @@
-/*# sourceMappingURL=contact-styles.css.map */
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif&family=Playfair+Display:wght@400;500&family=Poppins:wght@100&family=Quattrocento+Sans&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Playfair Display", serif;
+  font-family: "Poppins", sans-serif;
+  font-family: "PT Serif", serif;
+  font-family: "Quattrocento Sans", sans-serif;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+ul, li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.contact-header {
+  text-align: center;
+}
+.section-title {
+  font-weight: bold;
+  font-family: serif;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: space-around;
+}
+.contact-container .contact-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.contact-container .contact-details .address-container {
+  display: flex;
+  justify-content: space-around;
+}
+.contact-container .contact-details .address-container .address-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact-container .contact-details .phone-container {
+  display: flex;
+  justify-content: space-around;
+}
+.contact-container .contact-details .phone-container .phone-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact-container .contact-details .email-container {
+  display: flex;
+  justify-content: space-around;
+}
+.contact-container .contact-details .email-container .email-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact-container .send-message {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.contact-container .send-message h2 {
+  text-align: center;
+}
+.contact-container .send-message .send-message-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.contact-container .send-message .send-message-inner .input-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.contact-container .send-message .send-message-inner .input-container input {
+  font-size: 2rem;
+}
+.contact-container .send-message .send-message-inner .send-message-btn button {
+  font-size: 1.5rem;
+  padding: 1rem;
+  border-radius: 25px;
+  background-color: rgba(0, 0, 0, 0.755);
+  color: ghostwhite;
+  border: 0;
+}
+.contact-container .send-message .send-message-inner .send-message-btn button:hover {
+  opacity: 0.7;
+}
+
+@media (width >= 320px) {
+  p {
+    font-size: 0.8rem;
+  }
+  h1 {
+    font-size: 1.2rem;
+  }
+  h3 {
+    font-size: 0.9rem;
+  }
+  .contact-header {
+    margin: 1rem 1rem 1rem 1rem;
+  }
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .address-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contact-container .contact-details .address-container .address-icon {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .contact-details .phone-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .phone-container .phone-icon {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .contact-details .email-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .email-container .email-icon {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .send-message {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contact-container .send-message h2 {
+    padding: 0.5rem;
+    font-size: 1rem;
+    text-align: center;
+  }
+  .contact-container .send-message .send-message-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .contact-container .send-message .send-message-inner .input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contact-container .send-message .send-message-inner .input-container input {
+    padding: 2rem;
+    font-size: 1.2rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn {
+    padding: 0.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+    font-size: 0.8rem;
+    border-radius: 5px;
+    padding: 0.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn button:hover {
+    opacity: 0.7;
+  }
+  .back-to-home {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0 0 0;
+  }
+  .back-to-home a button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+    padding: 0.5rem;
+    border-radius: 5px;
+    font-size: 0.8rem;
+  }
+  .back-to-home a button:hover {
+    opacity: 0.7;
+  }
+}
+@media (width >= 768px) {
+  p {
+    font-size: 1.5rem;
+  }
+  h1 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+  .contact-header {
+    margin: 1.2rem 1.2rem 1.2rem 1.2rem;
+  }
+  .contact-container {
+    height: 20rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .address-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contact-container .contact-details .address-container .address-icon {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .contact-details .phone-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .phone-container .phone-icon {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .contact-details .email-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .email-container .email-icon {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .send-message {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contact-container .send-message h2 {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .contact-container .send-message .send-message-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .contact-container .send-message .send-message-inner .input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .contact-container .send-message .send-message-inner .input-container input {
+    padding: 2rem;
+    font-size: 1.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn {
+    padding: 0.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    padding: 0.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn button:hover {
+    opacity: 0.7;
+  }
+  .back-to-home {
+    display: flex;
+    justify-content: center;
+    margin: 5rem 0 0 0;
+  }
+  .back-to-home a button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    border-radius: 5px;
+  }
+  .back-to-home a button:hover {
+    opacity: 0.7;
+  }
+}
+@media (width >= 1024px) {
+  p, h1, h3 {
+    font-size: 2.5rem;
+  }
+  .contact-header {
+    margin: 2rem 2rem 2rem 2rem;
+  }
+  .contact-container {
+    height: 20rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details {
+    height: 30rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .address-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contact-container .contact-details .address-container .address-icon {
+    font-size: 2rem;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .contact-details .phone-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .phone-container .phone-icon {
+    font-size: 2rem;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .contact-details .email-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .contact-container .contact-details .email-container .email-icon {
+    font-size: 2rem;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contact-container .send-message {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contact-container .send-message h2 {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .contact-container .send-message .send-message-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .contact-container .send-message .send-message-inner .input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .contact-container .send-message .send-message-inner .input-container input {
+    padding: 2rem;
+    font-size: 2.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn {
+    padding: 0.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    padding: 0.5rem;
+  }
+  .contact-container .send-message .send-message-inner .send-message-btn button:hover {
+    opacity: 0.7;
+  }
+  .back-to-home {
+    display: flex;
+    justify-content: center;
+    margin: 8rem 0 0 0;
+  }
+  .back-to-home a button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    border-radius: 5px;
+  }
+  .back-to-home a button:hover {
+    opacity: 0.7;
+  }
+}/*# sourceMappingURL=contact-styles.css.map */
